--- a/Trinity.Mvc/Views/Shared/Components/MakeDonation/Default.cshtml
+++ b/Trinity.Mvc/Views/Shared/Components/MakeDonation/Default.cshtml
@@ -28,7 +28,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" form="donation-form" class="btn btn-primary" onclick="SaveStudent()">Save now</button>
+                <button type="button" form="donation-form" class="btn btn-primary" onclick="makeDonation()">Save now</button>
                 <button type="button" class="btn btn-cta-soft me-2" data-bs-dismiss="modal"> Cancel</button>
             </div>
         </div>
