--- a/Trinity.Mvc/Views/Shared/Journeys/_JourneyScenes.cshtml
+++ b/Trinity.Mvc/Views/Shared/Journeys/_JourneyScenes.cshtml
@@ -6,7 +6,7 @@
         <a class="btn btn-sm btn-primary-soft" href="#" data-bs-toggle="modal" data-bs-target="#saveSceneModal"> <i class="fa-solid fa-plus pe-1"></i> Create scene</a>
     </div>
     <div class="card-body">
-        <div class="row g-3">
+        <div id="sceneData" class="row g-3">
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="border border-2 py-5 border-dashed h-100 rounded text-center d-flex align-items-center justify-content-center position-relative">
                     <a class="stretched-link" data-bs-toggle="modal" data-bs-target="#saveSceneModal">
@@ -15,127 +15,127 @@
                     </a>
                 </div>
             </div>
-            @foreach (var item in Model.Journey!.Scenes)
-            {
-                <div class="col-sm-6 col-lg-3 position-relative">
-                    <div class="position-absolute bottom-0 mb-5 end-0">
-                        <!-- Dropdown START -->
-                        <div class="dropdown mb-2 me-3">
-                            <a href="#" class="icon-sm bg-primary text-white rounded-circle" id="photoActionEdit" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-pencil-fill"></i>
-                            </a>
-                            <!-- Dropdown menu -->
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="photoActionEdit">
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-tag fa-fw pe-1"></i> Remove Tag</a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-download fa-fw pe-1"></i> Download </a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-person fa-fw pe-1"></i> Make Profile Picture</a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-person-bounding-box fa-fw pe-1"></i> Make Cover Photo</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-flag fa-fw pe-1"></i> Report photo</a></li>
+                @foreach (var item in Model.Journey!.Scenes)
+                {
+                    <div class="col-sm-6 col-lg-3 position-relative">
+                        <div class="position-absolute bottom-0 mb-5 end-0">
+                            <!-- Dropdown START -->
+                            <div class="dropdown mb-2 me-3">
+                                <a href="#" class="icon-sm bg-primary text-white rounded-circle" id="photoActionEdit-@item.Id" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-pencil-fill"></i>
+                                </a>
+                                <!-- Dropdown menu -->
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="photoActionEdit-@item.Id">
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-tag fa-fw pe-1"></i> Remove Tag</a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-download fa-fw pe-1"></i> Download </a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-person fa-fw pe-1"></i> Make Profile Picture</a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-person-bounding-box fa-fw pe-1"></i> Make Cover Photo</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-flag fa-fw pe-1"></i> Report photo</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <a href="~/media/scenes/@item.Photo" data-gallery="image-popup" data-glightbox="description: .custom-desc-@item.Id; descPosition: left;">
+                            <img class="rounded img-fluid" src="~/media/scenes/@item.Photo" alt="">
+                        </a>
+                        <ul class="nav nav-stack py-2 small">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#!"> <i class="bi bi-heart-fill text-danger pe-1"></i>22k </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#!"> <i class="bi bi-chat-left-text-fill pe-1"></i>3k </a>
+                            </li>
+                        </ul>
+                        <div class="glightbox-desc custom-desc-@item.Id">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div class="d-flex align-items-center">
+                                    <div class="avatar me-2">
+                                        <img class="avatar-img rounded-circle" src="~/media/projects/@Model.Photo" alt="">
+                                    </div>
+                                    <div>
+                                    <div class="nav nav-divider">
+                                        <h6 class="nav-item card-title mb-0">@Model.Name</h6>
+                                        <span class="nav-item small"> 2hr</span>
+                                    </div>
+                                    <p class="mb-0 small">@Model.Manager!.FullName</p>
+                                    </div>
+                                </div>
+                                <div class="dropdown">
+                                    <a href="#" class="text-secondary btn btn-secondary-soft-hover py-1 px-2" id="cardFeedAction-@item.Id" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="bi bi-three-dots"></i>
+                                    </a>
+                                    <!-- Card feed action dropdown menu -->
+                                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="cardFeedAction-@item.Id">
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-bookmark fa-fw pe-2"></i>Save post</a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-person-x fa-fw pe-2"></i>Unfollow lori ferguson </a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-x-circle fa-fw pe-2"></i>Hide post</a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-slash-circle fa-fw pe-2"></i>Block</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-flag fa-fw pe-2"></i>Report post</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <h6 class="my-3 ">@item.Title</h6>
+                            <p class="mb-0">@item.Content </p>
+                            <ul class="nav nav-stack py-3 small">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#!"> <i class="bi bi-hand-thumbs-up-fill pe-1"></i>Liked (56)</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#!"> <i class="bi bi-chat-fill pe-1"></i>Comments (12)</a>
+                                </li>
+                                <li class="nav-item dropdown ms-auto">
+                                    <a class="nav-link mb-0" href="#" id="cardShareAction-@item.Id" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-reply-fill fa-flip-horizontal pe-1"></i>Share (3)
+                                    </a>
+                                    <!-- Card share action dropdown menu -->
+                                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="cardShareAction-@item.Id">
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-envelope fa-fw pe-2"></i>Send via Direct Message</a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-bookmark-check fa-fw pe-2"></i>Bookmark </a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-link fa-fw pe-2"></i>Copy link to post</a></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-share fa-fw pe-2"></i>Share post via …</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#"> <i class="bi bi-pencil-square fa-fw pe-2"></i>Share to News Feed</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                            <ul class="comment-wrap list-unstyled ">
+                                <li class="comment-item">
+                                    <div class="d-flex">
+                                    <!-- Avatar -->
+                                    <div class="avatar avatar-xs">
+                                        <img class="avatar-img rounded-circle" src="~/assets/images/avatar/05.jpg" alt="">
+                                    </div>
+                                    <div class="ms-2">
+                                        <!-- Comment by -->
+                                        <div class="bg-light rounded-start-top-0 p-3 rounded">
+                                        <div class="d-flex justify-content-center">
+                                            <div class="me-2">
+                                            <h6 class="mb-1"> <a href="#!"> Frances Guerrero </a></h6>
+                                            <p class="small mb-0">Removed demands expense account in outward tedious do.</p>
+                                            </div>
+                                            <small>5hr</small>
+                                        </div>
+                                        </div>
+                                        <!-- Comment react -->
+                                        <ul class="nav nav-divider py-2 small">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#!"> Like (3)</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#!"> Reply</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#!"> View 5 replies</a>
+                                        </li>
+                                        </ul>
+                                    </div>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                     </div>
-                    <a href="~/media/scenes/@item.Photo" data-gallery="image-popup" data-glightbox="description: .custom-desc2; descPosition: left;">
-                        <img class="rounded img-fluid" src="~/media/scenes/@item.Photo" alt="">
-                    </a>
-                    <ul class="nav nav-stack py-2 small">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#!"> <i class="bi bi-heart-fill text-danger pe-1"></i>22k </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#!"> <i class="bi bi-chat-left-text-fill pe-1"></i>3k </a>
-                        </li>
-                    </ul>
-                    <div class="glightbox-desc custom-desc2">
-                        <div class="d-flex align-items-center justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <div class="avatar me-2">
-                                    <img class="avatar-img rounded-circle" src="~/media/projects/@Model.Photo" alt="">
-                                </div>
-                                <div>
-                                <div class="nav nav-divider">
-                                    <h6 class="nav-item card-title mb-0">@Model.Name</h6>
-                                    <span class="nav-item small"> 2hr</span>
-                                </div>
-                                <p class="mb-0 small">@Model.Cause!.Name</p>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a href="#" class="text-secondary btn btn-secondary-soft-hover py-1 px-2" id="cardFeedAction" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="bi bi-three-dots"></i>
-                                </a>
-                                <!-- Card feed action dropdown menu -->
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="cardFeedAction">
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-bookmark fa-fw pe-2"></i>Save post</a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-person-x fa-fw pe-2"></i>Unfollow lori ferguson </a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-x-circle fa-fw pe-2"></i>Hide post</a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-slash-circle fa-fw pe-2"></i>Block</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-flag fa-fw pe-2"></i>Report post</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <h6 class="my-3 ">@item.Title</h6>
-                        <p class="mb-0">@item.Content </p>
-                        <ul class="nav nav-stack py-3 small">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#!"> <i class="bi bi-hand-thumbs-up-fill pe-1"></i>Liked (56)</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#!"> <i class="bi bi-chat-fill pe-1"></i>Comments (12)</a>
-                            </li>
-                            <li class="nav-item dropdown ms-auto">
-                                <a class="nav-link mb-0" href="#" id="cardShareAction" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-reply-fill fa-flip-horizontal pe-1"></i>Share (3)
-                                </a>
-                                <!-- Card share action dropdown menu -->
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="cardShareAction">
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-envelope fa-fw pe-2"></i>Send via Direct Message</a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-bookmark-check fa-fw pe-2"></i>Bookmark </a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-link fa-fw pe-2"></i>Copy link to post</a></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-share fa-fw pe-2"></i>Share post via …</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"> <i class="bi bi-pencil-square fa-fw pe-2"></i>Share to News Feed</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <ul class="comment-wrap list-unstyled ">
-                            <li class="comment-item">
-                                <div class="d-flex">
-                                <!-- Avatar -->
-                                <div class="avatar avatar-xs">
-                                    <img class="avatar-img rounded-circle" src="~/assets/images/avatar/05.jpg" alt="">
-                                </div>
-                                <div class="ms-2">
-                                    <!-- Comment by -->
-                                    <div class="bg-light rounded-start-top-0 p-3 rounded">
-                                    <div class="d-flex justify-content-center">
-                                        <div class="me-2">
-                                        <h6 class="mb-1"> <a href="#!"> Frances Guerrero </a></h6>
-                                        <p class="small mb-0">Removed demands expense account in outward tedious do.</p>
-                                        </div>
-                                        <small>5hr</small>
-                                    </div>
-                                    </div>
-                                    <!-- Comment react -->
-                                    <ul class="nav nav-divider py-2 small">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#!"> Like (3)</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#!"> Reply</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#!"> View 5 replies</a>
-                                    </li>
-                                    </ul>
-                                </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            }
+                }
         </div>   
     </div>
 </div>
