--- a/Trinity.Mvc/Views/Shared/Projects/_ProjectNav.cshtml
+++ b/Trinity.Mvc/Views/Shared/Projects/_ProjectNav.cshtml
@@ -72,9 +72,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light-emphasis" href="#"> 
+                            <a class="nav-link text-light-emphasis" asp-controller="Projects" asp-action="Fundraiser" asp-route-id="@Model.Id"> 
                                 <i class="fa-solid fa-hand-holding-heart me-2"></i>
-                                Donations
+                                Fundraiser
                             </a>
                         </li>
                     </ul>
