--- a/Trinity.Mvc/Views/Shared/Projects/_ProjectTable.cshtml
+++ b/Trinity.Mvc/Views/Shared/Projects/_ProjectTable.cshtml
@@ -18,7 +18,7 @@
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="projectData">
                     @foreach (var item in Model)
                     {
                         <tr>
