fumble in search of recovery

--- a/Trinity.Mvc/Views/Endeavors/Journey.cshtml
+++ b/Trinity.Mvc/Views/Endeavors/Journey.cshtml
@@ -38,3 +38,7 @@
 @section JavaScripts {
     <script src="~/assets/vendor/glightbox-master/dist/js/glightbox.min.js"></script>
 }
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/app.js"></script>
+}
