--- a/Trinity.Mvc/Views/Shared/Discussions/_DiscussionInfoCard.cshtml
+++ b/Trinity.Mvc/Views/Shared/Discussions/_DiscussionInfoCard.cshtml
@@ -49,7 +49,7 @@
                             <div class="vr"></div>
                             <!-- User stat item -->
                             <div>
-                                <h6 class="mb-0">@Model.Posts.Sum(p => p.Likes.Count())</h6>
+                                <h6 class="mb-0">0</h6>
                                 <small>Likes</small>
                             </div>
                         </div>
