--- a/Trinity.Mvc/Views/Shared/Posts/_PostCard.cshtml
+++ b/Trinity.Mvc/Views/Shared/Posts/_PostCard.cshtml
@@ -69,7 +69,7 @@
 		<!-- Feed react START -->
 		<ul class="nav nav-fill nav-stack small">
 			<li class="nav-item">
-				<a class="nav-link mb-0 active text-complementary" href="#!"> <i class="bi bi-heart pe-1"></i>Likes (@Model.Likes.Count())</a>
+				<a class="nav-link mb-0 active text-complementary" href="#!"> <i class="bi bi-heart pe-1"></i>Likes (0)</a>
 			</li>
 			<!-- Card share action dropdown START -->
 			<li class="nav-item dropdown">
