--- a/Trinity.Mvc/Views/Shared/Journeys/_PeoplesJourney.cshtml
+++ b/Trinity.Mvc/Views/Shared/Journeys/_PeoplesJourney.cshtml
@@ -53,8 +53,7 @@
                         <p class="mb-0">@item.Content </p>
                         <ul class="nav nav-stack py-3 small">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#!"> <i class="bi bi-hand-thumbs-up-fill pe-1"></i>Liked (56)</a>
-                                @* <a class="nav-link" href="#!"> <i class="bi bi-hand-thumbs-up pe-1"></i>Liked (56)</a> *@
+                                @await Component.InvokeAsync("SceneInteraction", new { sceneId = item.Id })
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#!"> <i class="bi bi-chat-fill pe-1"></i>Comments (12)</a>
